--- a/eshell/history
+++ b/eshell/history
@@ -1,10 +1,4 @@
 ls
-cd file-storage/
-ls
-cd e5a4344e-2eb0-4fcf-a219-b9fd2578d6fa/
-ls
-cd tiles/
-ls
 cd 1
 ls
 cd 0
@@ -126,3 +120,9 @@ sudo /usr/bin/python .autoselfcontrol.py
 ls
 sudo python ./auto-selfcontrol.py
 sudo python ./auto-selfcontrol.py
+cd ~/source
+ls
+git clone git@github.com:onyx-platform/onyx-starter.git
+ls
+git clone https://github.com/onyx-platform/onyx-starter.git
+cd onyx-starter/
